--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,306 @@
+/* code adapted from https://www.codingnepalweb.com/quiz-app-with-timer-javascript/ */
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
 
-.display{
-    display: none;
+.info_box,
+.quiz_box,
+.result_box,
+.hs_box {
+    position: absolute; 
+    top: 40%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 
+                0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.info_box.activeInfo,
+.quiz_box.activeQuiz,
+.result_box.activeResult,
+.hs_box.activeHs{
+    opacity: 1;
+    z-index: 5;
+    pointer-events: auto;
+    transform: translate(-50%, -50%) scale(1);
+}
+
+.info_box {
+    width: 650px;
+    height: 460px;
+}
+
+.quiz_box{
+    width: 650px;
+    height: 460px;
+    background: #fff;
+    border-radius: 5px;
+    transform: translate(-50%, -50%) scale(0.9);
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s ease;
+}
+
+.result_box{
+    width: 650px;
+    height: 460px;
+    background: #fff;
+    border-radius: 5px;
+    display: flex;
+    padding: 25px 30px;
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    /* flex-direction: column; */
+    justify-content: center;
+    transform: translate(-50%, -50%) scale(0.9);
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s ease;
+}
+
+.hs_box{
+    width: 650px;
+    height: 460px;
+    background: #fff;
+    border-radius: 5px;
+    display: flex;
+    padding: 25px 30px;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    transform: translate(-50%, -50%) scale(0.9);
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s ease;
+}
+
+.info_box header .timer{
+    color: #004085;
+    background: #cce5ff;
+    border: 1px solid #b8daff;
+    height: 45px;
+    padding: 0 8px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 145px;
+}
+.info_box header .timer .time_left_txt{
+    font-weight: 400;
+    font-size: 17px;
+    user-select: none;
+}
+.info_box header .timer .timer_sec{
+    font-size: 18px;
+    font-weight: 500;
+    height: 30px;
+    width: 45px;
+    border-radius: 5px;
+    line-height: 30px;
+    text-align: center;
+    user-select: none;
+}
+
+.quiz_box header .timer{
+    color: #004085;
+    background: #cce5ff;
+    border: 1px solid #b8daff;
+    height: 45px;
+    padding: 0 8px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 145px;
+}
+.quiz_box header .timer .time_left_txt{
+    font-weight: 400;
+    font-size: 17px;
+    user-select: none;
+}
+.quiz_box header .timer .timer_sec{
+    font-size: 18px;
+    font-weight: 500;
+    height: 30px;
+    width: 45px;
+    border-radius: 5px;
+    line-height: 30px;
+    text-align: center;
+    user-select: none;
+}
+
+.result_box header .timer{
+    color: #004085;
+    background: #cce5ff;
+    border: 1px solid #b8daff;
+    height: 45px;
+    padding: 0 8px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 145px;
+}
+.result_box header .timer .time_left_txt{
+    font-weight: 400;
+    font-size: 17px;
+    user-select: none;
+}
+.result_box header .timer .timer_sec{
+    font-size: 18px;
+    font-weight: 500;
+    height: 30px;
+    width: 45px;
+    border-radius: 5px;
+    line-height: 30px;
+    text-align: center;
+    user-select: none;
+}
+
+.page, .hs {
+    border: 2px solid red;
+    border-radius: 10px;
+    margin: 50px 250px;
+    padding: 25px;
+}
+
+header {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+section {
+    text-align: center;
+    padding: 50px;
+}
+
+section .option_list{
+    padding: 20px 0px;
+    display: block;
+    width: 70%;   
+}
+section .option_list .option{
+    background: darkblue;
+    color: white;
+    border-radius: 5px;
+    padding: 8px 15px;
+    font-size: 17px;
+    margin-bottom: 15px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    opacity: 0.7;
+}
+section .option_list .option:last-child{
+    margin-bottom: 0px;
+}
+section .option_list .option:hover{
+    opacity: 1;
+}
+
+.que_text {
+    width: 100%;
+}
+
+#hs_btn1, #hs_btn2, #hs_btn3 {
+    color: #004085;
+    background-color: transparent; 
+    border: transparent; 
+}
+
+.start_btn {
+    position: absolute;
+}
+
+#start_btn {
+    color: #004085;
+    background: #cce5ff;
+    border: 1px solid #b8daff;
+    height: 45px;
+    padding: 0 8px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 145px;
+    font-weight: 400;
+    font-size: 17px;
+    user-select: none;
+    position: relative;
+    left: 175px;
+    top: 50px;
+}
+
+#submit_btn {
+    color: #004085;
+    background: #cce5ff;
+    border: 1px solid #b8daff;
+    height: 45px;
+    padding: 0 8px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 135px;
+    font-weight: 400;
+    font-size: 17px;
+    user-select: none;
+}
+
+.complete_text {
+    font-size: 30px;
+    font-weight: bold;
+    text-align: left;
+}
+
+.result_box {
+    position:absolute;
+    padding: 5px;
+}
+
+.result_box section {
+    width: 500px;
+    padding: 5px;
+}
+
+.results1, .results2, .complete_text {
+    position: relative;
+    left: 5px;
+    bottom: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    text-align: left;
+    justify-content: space-between;
+    left: 25px;
+}
+
+.results1 {
+    width: 37%;
+}
+
+.results2 {
+    width: 400px;
+    /* vertical-align: middle; */
+}
+
+.right_wrong {
+    border-bottom: 1px solid grey;
+}
+
+#initials{
+    width: 100px;
+    height: 45px;
+    border: 1px solid grey;
+    border-radius: 5px;
 }
